@@ -5,7 +5,6 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.modelmapper.ModelMapper;
 import sigcaps.repository.model.HistoricoChamados;
 import sigcaps.service.model.ChamadaPacienteDto;
 import sigcaps.service.model.HistoricoChamadosDto;
@@ -14,6 +13,7 @@ import java.time.Clock;
 import java.time.LocalDateTime;
 import java.time.ZoneId;
 import java.util.Collections;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.Mockito.*;
@@ -28,9 +28,6 @@ class ChamadaPacienteServiceTest {
 	private MessagingService messagingService;
 
 	@Mock
-	private ModelMapper modelMapper;
-
-	@Mock
 	private Clock clock;
 
 	@InjectMocks
@@ -40,38 +37,61 @@ class ChamadaPacienteServiceTest {
 	void chamarPaciente_DeveProcessarChamadaCompleta() {
 		LocalDateTime fixedTime = LocalDateTime.of(2024, 3, 15, 14, 30);
 		ChamadaPacienteDto dto = new ChamadaPacienteDto();
-		HistoricoChamados historico = new HistoricoChamados();
+		dto.setNomePaciente("Paciente Teste");
+		dto.setClassificacao("URGENTE");
+		dto.setTipoServico(List.of("CLÍNICA GERAL"));
+
+		HistoricoChamados historicoSalvo = new HistoricoChamados();
+		historicoSalvo.setNomePaciente(dto.getNomePaciente());
+		historicoSalvo.setClassificacao(dto.getClassificacao());
+		historicoSalvo.setTiposServico(dto.getTipoServico());
+		historicoSalvo.setHorario(fixedTime);
+
 		HistoricoChamadosDto historicoDto = new HistoricoChamadosDto();
+		historicoDto.setNomePaciente(historicoSalvo.getNomePaciente());
+		historicoDto.setClassificacao(historicoSalvo.getClassificacao());
+		historicoDto.setTipoServico(historicoSalvo.getTiposServico());
+		historicoDto.setHorario(historicoSalvo.getHorario());
 
 		when(clock.instant()).thenReturn(fixedTime.atZone(ZoneId.systemDefault()).toInstant());
 		when(clock.getZone()).thenReturn(ZoneId.systemDefault());
-		when(modelMapper.map(dto, HistoricoChamados.class)).thenReturn(historico);
-		when(modelMapper.map(historico, HistoricoChamadosDto.class)).thenReturn(historicoDto);
-		when(historicoService.getUltimos10Registros()).thenReturn(Collections.singletonList(historico));
+
+		when(historicoService.getUltimos10Registros()).thenReturn(List.of(historicoSalvo));
 
 		chamadaService.chamarPaciente(dto);
 
 		assertEquals(fixedTime, dto.getHorario());
-		verify(historicoService).save(historico);
-		verify(modelMapper).map(dto, HistoricoChamados.class);
-		verify(modelMapper).map(historico, HistoricoChamadosDto.class);
+
+		verify(historicoService).convertAndSave(dto);
+
+		verify(historicoService).getUltimos10Registros();
+
+		assertEquals(1, dto.getHistorico().size());
+		HistoricoChamadosDto dtoHistorico = dto.getHistorico().get(0);
+		assertEquals(historicoDto.getNomePaciente(), dtoHistorico.getNomePaciente());
+		assertEquals(historicoDto.getClassificacao(), dtoHistorico.getClassificacao());
+		assertEquals(historicoDto.getTipoServico(), dtoHistorico.getTipoServico());
+		assertEquals(historicoDto.getHorario(), dtoHistorico.getHorario());
+
 		verify(messagingService).convertAndSend("/topic/chamadaPaciente", dto);
 	}
 
 	@Test
-	void saveHistorico_DeveConverterESalvarCorretamente() {
+	void chamarPaciente_DeveLidarComListaVazia() {
 		LocalDateTime fixedTime = LocalDateTime.of(2024, 3, 15, 14, 30);
+		ChamadaPacienteDto dto = new ChamadaPacienteDto();
+
 		when(clock.instant()).thenReturn(fixedTime.atZone(ZoneId.systemDefault()).toInstant());
 		when(clock.getZone()).thenReturn(ZoneId.systemDefault());
 
-		ChamadaPacienteDto dto = new ChamadaPacienteDto();
-		HistoricoChamados historico = new HistoricoChamados();
-
-		when(modelMapper.map(dto, HistoricoChamados.class)).thenReturn(historico);
+		when(historicoService.getUltimos10Registros()).thenReturn(Collections.emptyList());
 
 		chamadaService.chamarPaciente(dto);
 
-		verify(modelMapper).map(dto, HistoricoChamados.class);
-		verify(historicoService).save(historico);
+		assertEquals(fixedTime, dto.getHorario());
+		verify(historicoService).convertAndSave(dto);
+		verify(historicoService).getUltimos10Registros();
+		assertEquals(0, dto.getHistorico().size());
+		verify(messagingService).convertAndSend("/topic/chamadaPaciente", dto);
 	}
 }
